[package]
name = "isnt"
version = "0.2.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Inverted versions of boolean-valued stdlib functions"
repository = "https://github.com/mahkoh/isnt"
categories = ["rust-patterns"]
exclude = ["/tpl", "/generator"]
